fixed cursor background in dark mode

--- a/browser/css/color-palette-dark.css
+++ b/browser/css/color-palette-dark.css
@@ -35,5 +35,7 @@
 	--color-warning: #eca700;
 	--color-success: #46ba61;
 
+	--color-cursor-blink-background: #fff;
+
 	--color-box-shadow: rgba(0, 0, 0, 0.5);
 }
