--- a/browser/css/leaflet.css
+++ b/browser/css/leaflet.css
@@ -690,7 +690,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @keyframes blink {
 	from, to {
-		background: #000;
+		background: var(--color-cursor-blink-background);
 	}
 	50% {
 		background: transparent;
@@ -699,7 +699,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-moz-keyframes blink {
 	from, to {
-		background: #000;
+		background: var(--color-cursor-blink-background);
 	}
 	50% {
 		background: transparent;
@@ -708,7 +708,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-webkit-keyframes blink {
 	from, to {
-		background: #000;
+		background: var(--color-cursor-blink-background);
 	}
 	50% {
 		background: transparent;
@@ -717,7 +717,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-ms-keyframes blink {
 	from, to {
-		background: #000;
+		background: var(--color-cursor-blink-background);
 	}
 	50% {
 		background: transparent;
@@ -726,7 +726,7 @@ div.leaflet-cursor-container:hover > .leaflet-cursor-header {
 
 @-o-keyframes blink {
 	from, to {
-		background: #000;
+		background: var(--color-cursor-blink-background);
 	}
 	50% {
 		background: transparent;
